[package]
name = "rust-m3u8-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
colored = "2.0"
urlencoding = "2.1"
